--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,10 +23,18 @@ license = {text = "MIT"}
 [project.optional-dependencies]
 dev = [
     "black>=24.10.0",
+    "isort>=5.13.2",
 ]
 alc = [
     "arclet-alconna>=1.8.34",
     "arclet-alconna-tools>=0.7.10",
+]
+docs = [
+    "mkdocs-material>=9.5.45",
+    "mkdocstrings-python>=1.12.2",
+    "mkdocs-gen-files>=0.5.0",
+    "mkdocs-literate-nav>=0.6.1",
+    "mkdocs-section-index>=0.3.9",
 ]
 [build-system]
 requires = ["pdm-backend"]
@@ -35,3 +43,7 @@ build-backend = "pdm.backend"
 
 [tool.pdm]
 distribution = true
+
+[tool.black]
+line-length = 110
+target-version = ['py39']
