--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "Cocotst"
-version = "0.0.6"
+version = "0.0.7b1"
 description = "Easily to code qqoffcial bot."
 authors = [
     {name = "Sibuxiangx", email = "sibuxiang@proton.me"},
@@ -18,6 +18,7 @@ dependencies = [
     "typer>=0.13.1",
     "richuru>=0.1.1",
     "watchdog[watchmedo]>=6.0.0",
+    "pydantic>=2.0",
 ]
 requires-python = ">=3.11"
 readme = "README.md"
